--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,12 @@
 {
   "name": "bookloop",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "bower": "^1.3.12",
+    "generator-angular": "^0.11.0",
+    "generator-karma": "^0.9.0",
+    "yo": "^1.3.3"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
