--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "dependencies": {
     "bower": "^1.3.12",
+    "ee-first": "^1.1.0",
     "generator-angular": "^0.11.1",
     "generator-karma": "^0.9.0",
+    "grunt-cli": "^0.1.13",
     "yo": "^1.4.5"
   },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.0.0",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-connect-proxy": "^0.1.11",
     "grunt-contrib-clean": "^0.6.0",
