--- a/client/package.json
+++ b/client/package.json
@@ -22,16 +22,18 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-newer": "^0.8.0",
     "grunt-ng-annotate": "^0.8.0",
+    "grunt-serve": "^0.1.6",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^2.0.0",
+    "gulp-serve": "^0.3.0",
     "jshint-stylish": "^1.0.0",
     "load-grunt-tasks": "^1.0.0",
     "time-grunt": "^1.0.0"
